tests/outref/TSCP14.ref
# Verify AVG/SUM/MIN/MAX work fine if done on table.col syntax (1 column)
Cross check on TSCP14_names.sql PASSED
Cross check on TSCP14_names1col.sql PASSED
# Verify AVG/SUM/MIN/MAX issue error with table.* even if table has only one column

-- TSCP14 : OCTO386 : Verify AVG/SUM/MIN/MAX issue error with table.* even if table has only one column

-- Test of ERR_MISTYPED_FUNCTION_TABLE_ASTERISK error

select SUM(n1.*) from names1col n1;
select MIN(n1.*) from names1col n1;
select MAX(n1.*) from names1col n1;
select AVG(n1.*) from names1col n1;
select SUM(DISTINCT n1.*) from names1col n1;
select MIN(DISTINCT n1.*) from names1col n1;
select MAX(DISTINCT n1.*) from names1col n1;
select AVG(DISTINCT n1.*) from names1col n1;

select SUM(n2.*) from (values (1), (2), (NULL)) n2;
select MIN(n2.*) from (values (1), (2), (NULL)) n2;
select MAX(n2.*) from (values (1), (2), (NULL)) n2;
select AVG(n2.*) from (values (1), (2), (NULL)) n2;
select SUM(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
select MIN(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
select MAX(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
select AVG(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;

select MIN(n2.*) from (select n1.firstname from names n1) n2;
select MAX(n2.*) from (select n1.firstname from names n1) n2;
select min(DISTINCT n2.*) from (select n1.firstname from names n1) n2;
select max(DISTINCT n2.*) from (select n1.firstname from names n1) n2;

[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function SUM cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select SUM(n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select SUM(n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MIN cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MIN(n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MIN(n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MAX cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MAX(n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MAX(n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function AVG cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select AVG(n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select AVG(n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function SUM cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select SUM(DISTINCT n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select SUM(DISTINCT n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MIN cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MIN(DISTINCT n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MIN(DISTINCT n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MAX cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MAX(DISTINCT n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MAX(DISTINCT n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function AVG cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select AVG(DISTINCT n1.*) from names1col n1;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select AVG(DISTINCT n1.*) from names1col n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function SUM cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select SUM(n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select SUM(n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MIN cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MIN(n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MIN(n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MAX cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MAX(n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MAX(n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function AVG cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select AVG(n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select AVG(n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function SUM cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select SUM(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select SUM(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MIN cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MIN(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MIN(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MAX cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MAX(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MAX(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function AVG cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select AVG(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select AVG(DISTINCT n2.*) from (values (1), (2), (NULL)) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MIN cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MIN(n2.*) from (select n1.firstname from names n1) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MIN(n2.*) from (select n1.firstname from names n1) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MAX cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select MAX(n2.*) from (select n1.firstname from names n1) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select MAX(n2.*) from (select n1.firstname from names n1) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MIN cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select min(DISTINCT n2.*) from (select n1.firstname from names n1) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select min(DISTINCT n2.*) from (select n1.firstname from names n1) n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_MISTYPED_FUNCTION_TABLE_ASTERISK : Function MAX cannot be invoked with a parameter of type TABLENAME.*
Error with syntax near (line 1, column 8):

select max(DISTINCT n2.*) from (select n1.firstname from names n1) n2;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select max(DISTINCT n2.*) from (select n1.firstname from names n1) n2;
